--- a/clash.yml
+++ b/clash.yml
@@ -7,6 +7,7 @@
 ####################################
 mixed-port: 7890
 allow-lan: true
+mode: Global
 log-level: info
 external-controller: 0.0.0.0:9090
 dns:
